src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name_DE__c</fullName>
        <label>Account Name DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_For_Reporting__c</fullName>
        <description>Workflows that populate this field:  Reporting on TASK type and Reporting on EVENT type

Reporting on the Type field (Activity)
Knowledge Article Number: 127119
Description
When creating a Custom Report Type (CRT) using activities you will lose the ability to report on activity type.  This is because the internal representation is not like our normal picklists, and so it’s difficult to expose.

The workaround in this situation is to create a workflow which will copy the values for the activity type field into a new custom field on Activities which is reportable.  Another option is to use APEX code in order to copy the value into a new Activity field.</description>
        <inlineHelpText>This is populated by two workflows that simply copy the Type field for reporting purposes.</inlineHelpText>
        <label>Activity Type_For Reporting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>IMPACT</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_Summary__c</fullName>
        <description>This field gives a preview of the Comments field of up to the first 80 characters.</description>
        <label>Comments Summary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>IF( Z_Logged_Client_Relations_Contact__c == true &amp;&amp;  YEAR(ActivityDate) =  YEAR(TODAY())  , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Risk_Level__c</fullName>
        <label>xCustomer Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DummyTouchField__c</fullName>
        <label>DummyTouchField</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <label>Resolution Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_s__c</fullName>
        <label>Solution(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>ePCR</fullName>
                </value>
                <value>
                    <fullName>Fire RMS</fullName>
                </value>
                <value>
                    <fullName>IQ Analytics</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Mobile Records</fullName>
                </value>
                <value>
                    <fullName>Omega</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Records</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Notes__c</fullName>
        <label>Task Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Elapsed__c</fullName>
        <description>A general estimate of how much time was spent on this task</description>
        <inlineHelpText>A general estimate of how much time was spent on this task</inlineHelpText>
        <label>Time Elapsed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Z_Logged_Client_Relations_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logged Wellness Check</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Cribb_Task</fullName>
        <columns>Account_Name__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHO_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting on someone else,Deferred,Canceled</value>
        </filters>
        <label>Cribb Task</label>
    </listViews>
    <listViews>
        <fullName>DBA_Related_Activities</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Burwell,Luong,Dao</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting on someone else,Deferred</value>
        </filters>
        <label>VisiNet - DBA/Upgrade Related Activities</label>
        <sharedTo>
            <group>VisiNetSupportTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Activities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Activities_test</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting on someone else,Deferred,Canceled</value>
        </filters>
        <label>My Activities- test</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>